--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,8 @@
     <title>Portfolio | Matthew Wilson</title>
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assests/css/style.css">
+     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 </head>
 
 <body>
@@ -47,14 +47,14 @@
                 <div class="card">
                     <img class="card-img-top" src= "assests/images/technics-q-c-640-480-1.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h3 class="card-title">Word Guess</h3>
+                      <h3 class="card-title"><a href = "https://mwilson7992.github.io/Homework3/" target ="_blank">Word Guess</a></h3>
                       <p class="card-text">Word guess project.</p>
                     </div>
                   </div>
                 <div class="card">
                   <img class="card-img-top" src= "assests/images/technics-q-c-640-480-2.jpg" alt="Card image cap">
                   <div class="card-body">
-                    <h3 class="card-title">RPG Game</h3>
+                    <h3 class="card-title"><a href = "https://mwilson7992.github.io/unit-4-game/" target = "_blank">RPG Game</a></h3>
                     <p class="card-text">RPG game project.</p>
                   </div>
                 </div>
